Fixes more actions z-index issue

--- a/assets/_styles/core/buttons.scss
+++ b/assets/_styles/core/buttons.scss
@@ -143,6 +143,7 @@ button {
 .more-actions {
   position: relative;
   display: inline-block;
+  z-index: 1;
   &__button {
     @extend .action--secondary;
     margin: 0 !important;
